--- a/src/app/global/navbar/navbar.component.html
+++ b/src/app/global/navbar/navbar.component.html
@@ -37,7 +37,7 @@
 
                 <mat-nav-list>
 
-                    <mat-list-item class="jod" routerLink="">
+                    <mat-list-item class="jod" routerLink="/user-home">
                         <mat-icon>dashboard</mat-icon><span>Home</span>
                     </mat-list-item>
 
