--- a/src/app/user/refer-home/refer-home.component.html
+++ b/src/app/user/refer-home/refer-home.component.html
@@ -7,7 +7,7 @@
 
                     <mat-form-field class="mid-width" appearance="outline">
                         <mat-label>Refer Code</mat-label>
-                        <input disabled type="text" style=" color: black;" [(ngModel)]="value" matInput
+                        <input disabled type="text" style=" color: black;" [(ngModel)]="text" matInput
                             placeholder="Enter here">
 
                     </mat-form-field>
