--- a/src/app/admin/withdrawl-ib-view/withdrawl-ib-view.component.html
+++ b/src/app/admin/withdrawl-ib-view/withdrawl-ib-view.component.html
@@ -19,6 +19,8 @@
                     [(ngModel)]="widthrawlIb.amount" matInput placeholder="Enter here">
 
             </mat-form-field>
+           <!-- {{widthrawlIb.amount*80}}.toFixed(3) -->
+           <p> {{(widthrawlIb.amount * 80).toFixed(3)}}</p>
             <mat-form-field class="full-width" appearance="outline">
                 <mat-label>Holder Name</mat-label>
                 <input disabled="true" required minlength="4" name="holderName" matInput
