--- a/src/app/global/navbar/navbar.component.css
+++ b/src/app/global/navbar/navbar.component.css
@@ -151,10 +151,14 @@ mat-expansion-panel .header {
 
 @media(max-width: 700px) {
     .logo {
-        width: 130px;
-        height: 130px;
+        width: 100px;
+        height: 100px;
+        justify-content:center;
+        margin-left:25%;
+    }
+    .logo1 {
+        width: 100px;
+        height: 100px;
 
-        justify-content: center;
-        margin-left: 25%;
     }
 }
