--- a/src/app/user/userhome/userhome.component.html
+++ b/src/app/user/userhome/userhome.component.html
@@ -49,7 +49,7 @@
     <div class="row" style="margin-top: 20px;">
         <div class="col-md-4">
             <div class="card">
-                <img class="card-img-top sp" src="/assets/Level-Main1.png" alt="Card image cap">
+                <img class="card-img-top sp" src="/assets/p3.jpg" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title">Level-1</h5>
                     <p class="card-text">Invest 25$ to 1000$ And Get 150% in 150 Days.
@@ -57,31 +57,31 @@
                     <p class="card-text">We will provide you 1% return on daily basis.
                     </p>
 
-                    <a href="#" class="btn btn-primary">Bricks-Funds</a>
+                    <button class="btn btn-primary" routerLink="/payment-home">Bricks-Funds</button>
                 </div>
             </div>
         </div>
         <div class="col-md-4">
             <div class="card">
-                <img class="card-img-top sp" src="/assets/Level-Main2.png" alt="Card image cap">
+                <img class="card-img-top sp" src="/assets/p2.jpg" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title">Level-2</h5>
                     <p class="card-text">Invest 1001$ to 4999$ And Get 150% in 90 Days.</p>
                     <p class="card-text">We will provide you 1.67% return on daily basis.
                     </p>
-                    <a href="#" class="btn btn-primary">Bricks-Funds</a>
+                    <button class="btn btn-primary" routerLink="/payment-home">Bricks-Funds</button>
                 </div>
             </div>
         </div>
         <div class="col-md-4">
             <div class="card">
-                <img class="card-img-top" src="/assets/Level-Main-3.png" width="200%" alt="Card image cap">
+                <img class="card-img-top" src="/assets/p1.jpg" width="200%" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title">Level-3</h5>
                     <p class="card-text">Invest Above 5000$ And Get 150% in 30 Days.</p>
                     <p class="card-text">We will provide you 5% return on daily basis.
                     </p>
-                    <a href="#" class="btn btn-primary">Bricks-Funds</a>
+                    <button class="btn btn-primary" routerLink="/payment-home">Bricks-Funds</button>
                 </div>
             </div>
         </div>
@@ -105,7 +105,7 @@
                     </p>
 
 
-                    <a href="#" class="btn btn-primary">Bricks-Funds</a>
+                    <button class="btn btn-primary">Bricks-Funds</button>
                 </div>
             </div>
         </div>
@@ -121,7 +121,8 @@
                         This approach leverages computational power to analyze vast amounts of data, execute trades,
                         and manage portfolios in a more efficient and systematic manner.</p>
 
-                    <a href="#" style="margin-top: 15px;" class="btn btn-primary">Bricks-Funds</a>
+                    <button style="margin-top: 15px;" class="btn btn-primary">Bricks-Funds</button>
+
                 </div>
             </div>
         </div>
