--- a/src/app/user/withdraw/withdraw-home/withdraw-home.component.html
+++ b/src/app/user/withdraw/withdraw-home/withdraw-home.component.html
@@ -110,7 +110,7 @@
                     <mat-form-field class="full-width" appearance="outline">
                         <mat-label>Enter Upi Id </mat-label>
                         <input required type="text" name="upiId" [(ngModel)]="widthrawl.upiId" matInput
-                            placeholder="Enter here" [minLength]="11" [maxlength]="11">
+                            placeholder="Enter here">
                     </mat-form-field>
 
 
