--- a/src/app/global/verify-email/verify-email.component.css
+++ b/src/app/global/verify-email/verify-email.component.css
@@ -118,6 +118,9 @@ body {
         overflow: visible;
         padding: 40px 15px 15px 15px;
     }
+    .logo {
+        margin-left: 33%;
+    }
 
 
 }
