--- a/src/app/global/verify-pass/verify-pass.component.css
+++ b/src/app/global/verify-pass/verify-pass.component.css
@@ -118,4 +118,7 @@ body {
         overflow: visible;
         padding: 40px 15px 15px 15px;
     }
+    .logo {
+        margin-left: 33%;
+    }
 }
