--- a/src/app/user/userhome/userhome.component.html
+++ b/src/app/user/userhome/userhome.component.html
@@ -52,7 +52,7 @@
                 <img class="card-img-top sp" src="/assets/p3.jpg" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title">Level-1</h5>
-                    <p class="card-text">Invest 25$ to 1000$ And Get 150% in 150 Days.
+                    <p class="card-text">Invest 25$ to 500$ And Get 150% in 150 Days.
                     </p>
                     <p class="card-text">We will provide you 1% return on daily basis.
                     </p>
@@ -66,7 +66,7 @@
                 <img class="card-img-top sp" src="/assets/p2.jpg" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title">Level-2</h5>
-                    <p class="card-text">Invest 1001$ to 4999$ And Get 150% in 90 Days.</p>
+                    <p class="card-text">Invest 501$ to 4999$ And Get 150% in 90 Days.</p>
                     <p class="card-text">We will provide you 1.67% return on daily basis.
                     </p>
                     <button class="btn btn-primary" routerLink="/payment-home">Bricks-Funds</button>
@@ -78,7 +78,7 @@
                 <img class="card-img-top" src="/assets/p1.jpg" width="200%" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title">Level-3</h5>
-                    <p class="card-text">Invest Above 5000$ And Get 150% in 30 Days.</p>
+                    <p class="card-text">Invest 5000$ or Above And Get 150% in 30 Days.</p>
                     <p class="card-text">We will provide you 5% return on daily basis.
                     </p>
                     <button class="btn btn-primary" routerLink="/payment-home">Bricks-Funds</button>
