--- a/src/app/global/home/home.component.html
+++ b/src/app/global/home/home.component.html
@@ -100,8 +100,7 @@
                     </div>
                     <div class="social_profile">
                         <ul>
-                            <li><a href="https://www.instagram.com/officialbricksfunds?igsh=MWFkMXJjcmg2NW9z"><i
-                                        class="fa-brands fa-instagram"></i></a></li>
+                            <li><a href="https://www.instagram.com/bricksfunds._?igsh=MXFvenQ3dW9iNDZ5dw=="></i></a></li>
                             <li><a href="https://twitter.com/BricksFunds"><i class="fa-brands fa-x-twitter"></i></a>
                             </li>
                             <li><a href="https://www.facebook.com/profile.php?id=61555361987675&mibextid=ZbWKwL"><i
