--- a/src/app/global/home/home.component.html
+++ b/src/app/global/home/home.component.html
@@ -100,7 +100,7 @@
                     </div>
                     <div class="social_profile">
                         <ul>
-                            <li><a href="https://www.instagram.com/bricksfunds._?igsh=MXFvenQ3dW9iNDZ5dw=="></i></a></li>
+                            <li><a href="https://www.instagram.com/bricksfunds._?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="></i></a></li>
                             <li><a href="https://twitter.com/BricksFunds"><i class="fa-brands fa-x-twitter"></i></a>
                             </li>
                             <li><a href="https://www.facebook.com/profile.php?id=61555361987675&mibextid=ZbWKwL"><i
