--- a/src/app/admin/user-withdrawl/user-withdrawl.component.html
+++ b/src/app/admin/user-withdrawl/user-withdrawl.component.html
@@ -41,8 +41,8 @@
                             <td data-label="Username">{{payIb[2]}}</td>
 
                             <td data-label="Amount">{{payIb[1]}}$</td>
-                            <td data-label="Amount">{{payIb[4]}}</td>
-                            <td data-label="Date">{{payIb[3]}}</td>
+                            <td data-label="Date">{{payIb[4]}}</td>
+                            <td data-label="Holder">{{payIb[3]}}</td>
 
                             <td data-label="Status">
 
@@ -96,8 +96,8 @@
                                 <td data-label="Username">{{payUpi[1]}}</td>
 
                                 <td data-label="Amount">{{payUpi[2]}}$</td>
-                                <td data-label="Amount">{{payUpi[5]}}</td>
-                                <td data-label="Date">{{payUpi[3]}}</td>
+                                <td data-label="Date">{{payUpi[5]}}</td>
+                                <td data-label="Holder">{{payUpi[3]}}</td>
 
 
                                 <td data-label="Status">
