--- a/src/app/admin/user-data/user-data.component.html
+++ b/src/app/admin/user-data/user-data.component.html
@@ -30,7 +30,7 @@
                             <td data-label="Username">{{user.username}}</td>
 
                             <td data-label="email">{{user.email}}</td>
-                            <td data-label="email">{{user.phone}}</td>
+                            <td data-label="phone">{{user.phone}}</td>
 
                         </tr>
 
